Added google search functionality

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
+                <action android:name="com.google.android.gms.actions.WEB_SEARCH"/>
                 <data android:scheme="geo"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
